# pctrack

./: .gitignore  CMakeLists.txt  README.md  load.py
PCTrack.xcodeproj/: project.pbxproj
PCTrack.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
PCTrack.xcodeproj/project.xcworkspace/xcshareddata/: PCTrack.xccheckout
src/: Info.plist  common.cpp  defs.hpp  main.cpp  pckinect.cpp  pcvis.cpp  shader.cpp  util.cpp
src/glsl/: points.frag  points.vert
src/sggl/: README.txt
timesync/: .gitignore  CMakeLists.txt  settings.json
timesync/src/: extract.cpp
